<resources>
    <string name="app_name">ProjectAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="login">Logowanie</string>
    <string name="create_account">Stwórz Konto</string>
    <string name="register">Rejestracja</string>
    <string name="user_name">Login</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="search">Szukaj...</string>
    <string name="aboutMeDescription">Hej! Miło mi, że wpadłeś zobaczyć Aplikację.\nInteresuję się programowanie już od szkoły średniej. \nProgramuję w takich językach jak Python, Java, C czy C++.\nW wolnej chwili lubię również posłuchać dobrej muzyki.\nJeżeli masz ochotę, mile widziany będzie feedback. :)\nInne moje projekty zobaczysz na githubie.</string>
    <string name="firstname">Imie</string>
    <string name="surname">Nazwisko</string>
    <string name="phone_number">Numer Telefonu</string>
    <string name="address">Adres</string>
    <string name="update">Aktualizuj</string>
    <string name="username">Użytkownik</string>
    <string name="clear_cart">Wyczyść koszyk</string>
    <string name="hint_password">Hasło</string>
    <string name="warnUser">Taki użytkownik nie istnieje!</string>
    <string name="totalPrice">Podsumowanie: </string>
    <string name="discountMSG">Zastosuj Obniżkę</string>
    <string name="makeOrder">Złóż zamówienie</string>
    <string name="emptyCart">Twój koszyk jest pusty.</string>
    <string name="email">Email</string>
    <string name="name">Nazwa:</string>
    <string name="category">Kategoria</string>
    <string name="currenecy">zł</string>
    <string name="price">Cena:</string>
    <string name="discount">Zniżka:</string>
    <string name="shake_to_discount">Potrząśnij, aby dostać zniżkę</string>
    <string name="order">Zamówienie</string>
    <string name="orderMSG">Czy napewno chcesz złożyć zamówienie?\nWartość do zapłaty to: </string>
    <string name="order_confirm">Zamawiam</string>
    <string name="order_cancel">Anuluj</string>
    <string name="ordered">Zamówiono</string>
    <string name="getDiscountMSG">Otrzymujesz 5% zniżki!</string>
    <string name="updatedData">Zaaktualizowano Dane</string>
    <string name="pcs_and_laptops">Komputery i Laptopy</string>
    <string name="procesors">Procesory</string>
    <string name="motherboard">Płyty Główne</string>
    <string name="keyBoard">Klawiatury</string>
    <string name="mouses">Myszki</string>

</resources>
