<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyCart">

    <LinearLayout
        android:id="@+id/linear_cart_layout"
        android:layout_width="match_parent"
        android:layout_height="516dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/clear_cart_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_cart" />

        <TextView
            android:id="@+id/cart_total_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/totalPrice"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/discountButton"
                android:layout_width="0dp"
                android:layout_weight="1"

                android:layout_height="wrap_content"
                android:background="@color/colorAccentOrange"
                android:text="@string/discountMSG"
                />

            <Button
                android:id="@+id/orderButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/colorAccentOrange"
                android:text="@string/makeOrder"
                />
        </LinearLayout>


        <ListView
            android:id="@+id/myItems_listView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/fab_margin"
            app:layout_constraintBottom_toTopOf="@id/discountButton" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_cart_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/cart_message"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="221dp"
            android:layout_weight="16.22"
            android:gravity="center"
            android:text="@string/emptyCart"
            android:textSize="20dp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>